tests/smt2/error/rollback-unsat.smt2
(push)
(assert false)
(push)
(bad)
(pop)
(check-sat)